# sqlcron

./: Dockerfile  README.md  pyproject.toml  requirements.txt
sql/: 001_install.sql  002_procedures.sql
worker/: sqlcron_worker.py
