[project]
name = "sqlcron-worker"
version = "0.1.0"
description = "Lightweight cron-style job scheduler for SQL Server (pg_cron for SQL Server)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "sqlcron contributors" }]
keywords = ["sql-server", "cron", "scheduler", "database", "jobs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]

dependencies = [
    "pyodbc>=5.0",
    "croniter>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
sqlcron-worker = "sqlcron_worker:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "worker" }
py-modules = ["sqlcron_worker"]
